# LudumDare56

./: Cargo.toml  grunt.txt
Spine Sprites/: ContextItem.xcf
Spine Sprites/Chat/: Chat.xcf
Spine Sprites/Demon/: Arm.xcf  Foot.xcf  Hand.xcf  Head.xcf  Hip.xcf  Leg.xcf  Torso.xcf
Spine Sprites/Desk/: Alembic.xcf  CandleLight.xcf  Journal.xcf  LoneCandle.xcf  Potion Layer.xcf  Potion.xcf  PotionBottle.xcf  Summoning.xcf  Swirl Layer.xcf
Spines/: Chat.spine  Context.spine  Demon.spine  Desk.spine
assets/: Backdrop.xcf  Debug.xcf  NoBackdrop.xcf  ZZZPaperdoll.xcf  demon.brain
assets/spines/: chat.atlas  chat.json  context.atlas  context.json  demon.atlas  demon.json  desk.atlas  desk.json
src/: assets.rs  main.rs  prelude.rs  state.rs
src/desk/: context.rs  interaction.rs  mod.rs  tools.rs
src/game/: camera.rs  chat.rs  mod.rs
src/game/backdrop/: items.rs  mod.rs  setup.rs
src/game/demon/: actions.rs  brain.rs  mod.rs  rand.rs  spawn.rs
src/game/input/: context.rs  interaction.rs  mod.rs
